# canonical-naming-service

./: .env.example  .gitignore  DECISIONS.md  Makefile  README.md  pyproject.toml
data/: seed.json
src/canonical_naming/: config.py  main.py
src/canonical_naming/api/: deps.py  entities.py  health.py  resolve.py
src/canonical_naming/matching/: _index.py  base.py  exact.py  fuzzy.py  llm.py  normalizer.py
src/canonical_naming/models/: __init__.py  api.py  entity.py  matching.py
src/canonical_naming/repos/: entity_repo.py
src/canonical_naming/services/: resolver.py
tests/: fixtures.py  test_api_routes.py  test_brief_samples.py  test_config.py  test_entity_repo.py  test_exact_matcher.py  test_fuzzy_matcher.py  test_health.py  test_llm_matcher.py  test_models.py  test_normalizer.py  test_resolver_service.py  test_seed.py
